# dashboard-balanced-approach

./: .gitignore  Procfile  README_STRUCTURE.md  STOCKS_EN_FLOWS_BEREKENEN.md  _add_kolomtabellen.py  _debug_bebouwbaar_naar_onbebouwbaar.csv  app.py  calculations.py  config.py  contour.ipynb  contour_analyse_1.py  contour_analyse_1_showcase.py  contour_analyse_2.py  contour_analyse_2_showcase.py  contour_data.html  contour_data.ipynb  contour_data.py  contour_data_vlaanderen.ipynb  contour_flows.ipynb  contour_legacy.ipynb  contour_vlaanderen.py  contour_vlaanderen_grafieken.py  contour_vlaanderen_kaart.py  contour_vlaanderen_kolommen.py  contour_vlaanderen_transacties.py  contour_vlaanderen_vergunningen.py  idea_consult_altair_theme.py  klad.py  main.py  pyproject.toml  readme.md  requirements.txt
.ipynb_checkpoints/: contour-checkpoint.ipynb  contour_data-checkpoint.ipynb  contour_data_vlaanderen-checkpoint.ipynb  contour_flows-checkpoint.ipynb
contour/: __init__.py  columns.py  consolidate.py  data_notebook.py  data_notebook_vlaanderen.py  export.py  flow_stap_docs.py  flows.py  flows_per_contour.py  inventory.py  loaders.py  notebook_viz.py  paths.py  pipeline.py  prices.py  schema.py  spatial.py  vergunningen.py
data/: 20260619 data brussel aantal woningen (bron 2021).xlsx  contour.xlsx  population 2024 par bout de secteur stat.xlsx  vergunningen_omgevingsloket_2026.xlsx  vergunningen_omgevingsloket_2026_lang.csv
data_1/: 20260622 data vlaanderen 2 bebouwbaar en onbebouwbaar.xlsx  20260624 data brussel aantal woningen.xlsx  README.md  (+2 more)
input/: flow  flow.csv  (+17 more)
(+68 files in other folders)
