[project]
name = "dashboard-balanced-approach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]
