[project]
name = "dashboard-balanced-approach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.1.0",
    "fastexcel>=0.20.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "polars>=1.41.2",
    "pydeck>=0.9.2",
    "pyproj>=3.7.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.57.0",
    "vl-convert-python>=1.9.0.post1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]
